src/emit/emitter/snapshots/hebi__emit__emitter__tests__method_call-2.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
o.f(0)

# Func:
function "code":
  frame_size: 5
  length: 16
  const (length=2):
    0: "f"
    1: "o"
  code:
     0 | push_small_int value=0
     5 | store_reg r4
     7 | load_global [1]
     9 | load_field [0]
    11 | call r4, args=1
    14 | ret 
    15 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  
