src/emit/emitter/snapshots/hebi__emit__emitter__tests__method_call-3.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
o.f(1,2,3)

# Func:
function "code":
  frame_size: 7
  length: 30
  const (length=2):
    0: "f"
    1: "o"
  code:
     0 | push_small_int value=1
     5 | store_reg r4
     7 | push_small_int value=2
    12 | store_reg r5
    14 | push_small_int value=3
    19 | store_reg r6
    21 | load_global [1]
    23 | load_field [0]
    25 | call r4, args=3
    28 | ret 
    29 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━━━━━━━━━━━━━●
r6 │                         ●━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  
