src/emit/emitter/snapshots/hebi__emit__emitter__tests__print_literals-3.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
print "test"

# Func:
function "code":
  frame_size: 4
  length: 5
  const (length=1):
    0: "test"
  code:
    0 | load_const [0]
    2 | print 
    3 | ret 
    4 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
