src/emit/emitter/snapshots/hebi__emit__emitter__tests__print_literals-5.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
print { a: 0, b: 1, c: 2 }

# Func:
function "code":
  frame_size: 6
  length: 44
  const (length=3):
    0: "a"
    1: "b"
    2: "c"
  code:
     0 | create_empty_dict 
     1 | store_reg r4
     3 | load_const [0]
     5 | store_reg r5
     7 | push_small_int value=0
    12 | insert_to_dict r5, r4
    15 | load_const [1]
    17 | store_reg r5
    19 | push_small_int value=1
    24 | insert_to_dict r5, r4
    27 | load_const [2]
    29 | store_reg r5
    31 | push_small_int value=2
    36 | insert_to_dict r5, r4
    39 | load_reg r4
    41 | print 
    42 | ret 
    43 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r5 │                         ●━━━━━━━●
r6 │                                         ●━━━━━━━●
r7 │                                                         ●━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  
