src/emit/emitter/snapshots/hebi__emit__emitter__tests__print_literals.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
print 0

# Func:
function "code":
  frame_size: 4
  length: 8
  const: <empty>
  code:
    0 | push_small_int value=0
    5 | print 
    6 | ret 
    7 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
