src/emit/emitter/snapshots/hebi__emit__emitter__tests__print_variable.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
v := 0
print v # load_reg


# Func:
function "code":
  frame_size: 4
  length: 12
  const (length=1):
    0: "v"
  code:
     0 | push_small_int value=0
     5 | store_global [0]
     7 | load_global [0]
     9 | print 
    10 | ret 
    11 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
